fixed image responsiveness on achievement page for phone screen

--- a/CSS/achievements.css
+++ b/CSS/achievements.css
@@ -363,7 +363,8 @@ header nav .navbar li a {
   transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
 }
 .award img {
-  width: 200px;
+  width: 100%;
+  max-width: 200px;
   height: auto;
 }
 .award.active {
