--- a/CSS/achievements.scss
+++ b/CSS/achievements.scss
@@ -444,7 +444,8 @@ header {
     transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
 
     img {
-        width: 200px;
+        width: 100%;
+        max-width: 200px;//it fix proper to phone screen
         height: auto;
     }
 
@@ -458,7 +459,8 @@ header {
     }
 }
 
-// Progress Bars
+// Progress Bars  
+
 .progress-container {
     width: 80%;
     margin: 40px auto;
