--- a/CSS/theme.css
+++ b/CSS/theme.css
@@ -92,4 +92,12 @@ body.dark-mode {
 
 html, body {
   overflow-x: hidden;
+}
+
+.gallery-section {
+  padding: 40px;
+  background-color: white;
+}
+body.dark-mode .gallery-section {
+  background-color: #1e1e1e;
 }/*# sourceMappingURL=theme.css.map */
