--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -358,6 +358,7 @@ header nav .navbar li a {
 .gallery-section .upload-section {
   margin-top: 30px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 10px;
 }
