--- a/CSS/theme.scss
+++ b/CSS/theme.scss
@@ -101,3 +101,9 @@ html, body {
     background-color: #1e1e1e;//gallery part
   }
 }
+
+footer .copyright {
+  font-size: 0.9rem;
+  opacity: 0.8;
+  color: #d4411e ;
+}
