--- a/CSS/adventures.css
+++ b/CSS/adventures.css
@@ -386,14 +386,16 @@ header nav .navbar li a {
   justify-content: center;
   align-items: center;
   margin-top: 30px;
+  max-width: 850px;
+  margin: auto;
   background: white;
-  padding: 20px;
+  padding: 0px;
   border-radius: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 .map-container #map {
-  width: 800px;
-  height: 500px;
+  width: 100%;
+  height: auto;
   background: #e0e0e0;
   border: 2px solid black;
 }
