--- a/CSS/about.scss
+++ b/CSS/about.scss
@@ -89,6 +89,7 @@ header {
       background-color: $primary-color;
       border-radius: 15px;
       cursor: pointer;
+      border: none;
     }
   
     .menu-icon {
@@ -181,6 +182,7 @@ header {
     #menu-toggle{
       padding: 5px;
       color: $primary-color;
+      background-color: $bg-color;
     }
   
     .search {
