--- a/CSS/adventures.css
+++ b/CSS/adventures.css
@@ -408,7 +408,6 @@ header nav .navbar li a {
   transition: transform 0.2s ease-in-out;
 }
 .marker:hover {
-  transform: scale(1.3);
   fill: blue;
 }
 .marker.active {
@@ -458,6 +457,10 @@ header nav .navbar li a {
   border-radius: 8px;
   background-color: #f9f9f9;
   cursor: crosshair;
+}
+#route-planner svg#custom-map img {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 #route-planner svg#custom-map .waypoint {
   fill: #3498db;
@@ -541,7 +544,7 @@ header nav .navbar li a {
 }
 #maintenance-tips .tips-grid {
   display: grid;
-  gap: 1.5rem;
+  gap: 2.5rem;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   perspective: 1000px;
 }
@@ -560,7 +563,6 @@ header nav .navbar li a {
   position: absolute;
   width: 100%;
   height: 100%;
-  padding: 1rem;
   border-radius: 10px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
   backface-visibility: hidden;
