--- a/CSS/theme.css
+++ b/CSS/theme.css
@@ -106,4 +106,12 @@ footer .copyright {
   font-size: 0.9rem;
   opacity: 0.8;
   color: #d4411e;
+}
+
+@media (max-width: 768px) {
+  .dark-mode #menu-toggle {
+    padding: 5px;
+    color: #ff5733;
+    background-color: #2b2b2b !important;
+  }
 }/*# sourceMappingURL=theme.css.map */
